syntax = "proto3";

package keybox;
option go_package = "github.com/phaesoo/keybox/gen/go/proto";

import "google/api/annotations.proto";

service Admin {
    rpc RegisterKey(RegisterRequest) returns (RegisterReply){
        option (google.api.http) = {
            post: "/v1/keys"
        };
    }
    rpc DeregisterKey(RegisterRequest) returns (RegisterReply){
        option (google.api.http) = {
            delete: "/v1/keys"
        };
    }
}

message RegisterRequest {
    string user_id = 1;
}

message RegisterReply {
    string key_id = 1;
}

message DeregisterRequest {
    string key_id = 1;
}

message DeregisterReply {
}