syntax = "proto3";

package citadel;
option go_package = "github.com/phaesoo/citadel/gen/go/proto";

service Encryption {
    rpc Encrypt(EncryptionRequest) returns (EncryptionResponse);
    rpc Decrypt(DecryptionRequest) returns (DecryptionResponse);
}

message EncryptionRequest {
    string key_id = 1;
    string plaintext = 2;
}

message EncryptionResponse {
    string key_id = 1;
    string ciphertext = 2;
}

message DecryptionRequest {
    string key_id = 1;
    string ciphertext = 2;
}

message DecryptionResponse {
    string key_id = 1;
    string plaintext = 2;
}